# xero_visma_v2

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  contacts.json  docker-compose.override.yml  docker-compose.yml  pyproject.toml
Dataform/: BI_FinanceTable.sql  BI_FinanceTable_limit.sql  README.md  compiled.json  delete_gcp_file.py  sync_from_gcp.py  sync_to_gcp.py  workflow_settings.yaml
Dataform/definitions/bronze/excel/: Selgere 20260420.xlsx  raw_charts_of_accounts.sqlx  raw_entity_mapping.sqlx
Dataform/definitions/bronze/visma/: history_currency_rates.sqlx  visma_accounts.sqlx  visma_attributes.sqlx  visma_branches.sqlx  visma_budgets.sqlx  visma_carriers.sqlx  visma_cash_accounts.sqlx  visma_cash_sales.sqlx  visma_cash_transactions.sqlx  visma_contacts.sqlx  visma_countries.sqlx  visma_credit_terms.sqlx  visma_currencies.sqlx  visma_currency_rates.sqlx  visma_customer_classes.sqlx  visma_customer_contracts.sqlx  visma_customer_credit_notes.sqlx  visma_customer_debit_notes.sqlx  visma_customer_documents.sqlx  visma_customer_invoices.sqlx  visma_customer_locations.sqlx  visma_customer_overdue_charges.sqlx  (+63 more)
Dataform/definitions/ods_xero_0/: dim_account.sqlx  dim_branding_theme.sqlx  dim_contact.sqlx  dim_currency.sqlx  dim_item.sqlx  dim_organisation.sqlx  dim_tax_rate.sqlx  dim_tracking_category.sqlx  dim_tracking_option.sqlx  dim_user.sqlx  fact_bank_transaction_line.sqlx  fact_bank_transfer.sqlx  fact_credit_note_line.sqlx  fact_general_ledger.sqlx  fact_invoice_line.sqlx  fact_manual_journal_line.sqlx  fact_overpayment_line.sqlx  fact_payment.sqlx  fact_purchase_order_line.sqlx  fact_quote_line.sqlx  fact_report_row.sqlx
Dataform/definitions/ods_xero_1/: assert_fact_bank_transaction_line_reconciles.sqlx  assert_fact_credit_note_line_reconciles.sqlx  assert_fact_general_ledger_balances.sqlx  assert_fact_invoice_line_reconciles.sqlx  assert_fact_manual_journal_line_balances.sqlx  assert_fact_overpayment_line_reconciles.sqlx  assert_fact_purchase_order_line_reconciles.sqlx  assert_fact_quote_line_reconciles.sqlx  dim_account.sqlx  dim_branding_theme.sqlx  dim_contact.sqlx  dim_currency.sqlx  dim_item.sqlx  dim_organisation.sqlx  dim_tax_rate.sqlx  dim_tracking_category.sqlx  dim_tracking_option.sqlx  dim_user.sqlx  fact_bank_transaction_line.sqlx  fact_bank_transfer.sqlx  fact_credit_note_line.sqlx  fact_general_ledger.sqlx  fact_invoice_line.sqlx  fact_manual_journal_line.sqlx  fact_overpayment_line.sqlx  fact_payment.sqlx  fact_purchase_order_line.sqlx  fact_quote_line.sqlx  fact_report_row.sqlx  recon_document_facts.sqlx  recon_profit_and_loss.sqlx  recon_trial_balance.sqlx
Dataform/finance docs/: BI_tables.xlsx  BI_tables_living_document.xlsx  CC Connector for Visma Net - Financials Module.json  CC Connector for Visma Net - Logistics Module.json  Measures in SalesReport.csv  Omkostninger.xlsx  RLS SalesOrder.xlsx  Tabeller Aquatiq Sharepoint.json  financials_fact_to_dimension_mapping.csv  logistics_fact_to_dimension_mapping.csv  measures financial.csv  price_class_seed_mapping_template.csv  price_class_seed_mapping_template.sql  price_class_seed_mapping_template_notes.md  price_class_verification_output.txt  price_class_verification_plan.sql  reference_data.xlsx  relationships.csv
Dataform/scripts/: auth-gcp.sh  bq-query.sh  check-gcp-access.sh  dataform-run.sh  dataform-workflow-invoke.sh  gcp-env.sh  run-dataflow-job.sh  tail-dataflow-logs.sh  watch-dataflow-job.sh  watch-dataform-workflow.sh
core/crates/xero-auth/: Cargo.toml
core/crates/xero-auth/src/: custom_connection.rs  lib.rs  pkce.rs  token.rs
core/crates/xero-cli/: Cargo.toml
core/crates/xero-cli/src/: health.rs  main.rs  resolve.rs  sync.rs
core/crates/xero-client/: Cargo.toml
core/crates/xero-client/src/: lib.rs  rate_limit.rs  retry.rs
core/crates/xero-common/: Cargo.toml
core/crates/xero-common/src/: config.rs  error.rs  lib.rs  types.rs
core/crates/xero-gcs/: Cargo.toml
core/crates/xero-gcs/src/: error.rs  key.rs  lib.rs  manifest.rs  meta.rs  sink.rs
core/crates/xero-gcs/tests/: layout.rs
core/crates/xero-http/: Cargo.toml
core/crates/xero-http/src/: backfill.rs  cron_daemon.rs  lib.rs
core/crates/xero-state/: Cargo.toml
core/crates/xero-state/src/: backfill.rs  bq_sink.rs  checkpoint.rs  lib.rs  local_bronze.rs  run_history.rs  sync_schedule.rs  tenant.rs
core/crates/xero-sync/: Cargo.toml
core/crates/xero-sync/src/: lib.rs  mode.rs  report.rs
deploy/: crontab.example
docs/: ACCOUNTANTS_GUIDE_XERO_DATA.md  ACCOUNTANTS_TABLE_CATALOG.md  DWH_ARCHITECTURE.md  NEW_ARCHITECTURE_RAW_GCS.md  OPERATIONS.md  SILVER_XERO.md  STAGING_XERO.md  TRANSFORMATION_PLAN.md  layerSystem.md
docs/deprecated/: API.md  ARCHITECTURE.md  BACKFILL.md  BUG_E_LESSONS_APPLIED.md  README.md  layerSystem.md  phase6_rest_role_definition.md  phase7_testing_and_deployment.md
docs/deprecated/layeSystem/: LayerSystem.md  README.md
docs/layeSystem/Layer2/: layer2_agentic_mcp_tools.md
etl/: backfill_gcs.py
etl/cloud_function/: main.py
etl/common/: bq_reader.py  bq_writer.py  date_parser.py  endpoint_config.py  gcs_reader.py
etl/tests/: test_bank_transactions.py  test_bq_reader.py  test_bq_writer.py  test_date_parser.py  test_gcs_reader.py
etl/xero/: accounts.py  bank_transactions.py  bank_transfers.py  batch_payments.py  branding_themes.py  budgets.py  contact_groups.py  contacts.py  credit_notes.py  currencies.py  expense_claims.py  invoices.py  items.py  journals.py  linked_transactions.py  manual_journals.py  organisations.py  overpayments.py  payment_services.py  payments.py  prepayments.py  purchase_orders.py  quotes.py  receipts.py  repeating_invoices.py  reports.py  tax_rates.py  tracking_categories.py  users.py
migrations/: 0001_init.sql  0002_sync_checkpoint.sql  0003_run_history.sql  0004_local_bronze.sql  0005_sync_schedule.sql  0006_sync_run_trigger_id.sql  0007_backfill_plan.sql  0008_bronze_bq_synced.sql
tooling/: bq_provision.sh  test_endpoints.sh
tooling/src/xero_tooling/: __init__.py
tooling/tests/: test_loader.py
(+250 files in other folders)
