[workspace]
resolver = "2"
members = [
    "core/crates/xero-common",
    "core/crates/xero-auth",
    "core/crates/xero-state",
    "core/crates/xero-client",
    "core/crates/xero-sync",
    "core/crates/xero-http",
    "core/crates/xero-cli",
]

[workspace.package]
version    = "0.1.0"
edition    = "2021"
rust-version = "1.80"
license    = "Proprietary"
authors    = ["Aquatiq Integrasjonen"]

[workspace.dependencies]
# Async runtime + HTTP
tokio    = { version = "1.40", features = ["full"] }
reqwest  = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
axum     = "0.7"
tower    = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures  = "0.3"

# Serialization
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Errors + observability
anyhow            = "1.0"
thiserror         = "1.0"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
async-trait       = "0.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# DB
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "json",
    "macros",
    "migrate",
] }
deadpool-redis = "0.18"

# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Config
dotenvy = "0.15"

# IDs
uuid = { version = "1", features = ["v4", "serde"] }

# Base64 (PKCE)
base64 = "0.22"

# SHA-2 (PKCE code challenge)
sha2 = "0.10"

# Random
rand = "0.8"

# URL helpers
url = "2.5"

# BigQuery sink (streaming inserts). Default features pull in the crypto
# provider yup-oauth2 needs; we keep them on to avoid linker errors.
gcp-bigquery-client = "0.25"

# Cron expression parser for the schedule daemon.
cron = "0.13"

# Testing
tokio-test         = "0.4"
pretty_assertions  = "1.4"

# Workspace-internal
xero-common = { path = "core/crates/xero-common" }
xero-auth   = { path = "core/crates/xero-auth" }
xero-state  = { path = "core/crates/xero-state" }
xero-client = { path = "core/crates/xero-client" }
xero-sync   = { path = "core/crates/xero-sync" }
xero-http   = { path = "core/crates/xero-http" }
