[project]
name = "xero-tooling"
version = "0.1.0"
requires-python = ">=3.12"
description = "Python tooling for xero_service_v2 — BigQuery loader, normalizers"
authors = [{ name = "Aquatiq Integrasjonen" }]

dependencies = [
    "google-cloud-bigquery>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
strict = true
