[package]
name    = "xero-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
xero-common  = { workspace = true }
tokio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
chrono       = { workspace = true }
base64       = { workspace = true }
sha2         = { workspace = true }
rand         = { workspace = true }
url          = { workspace = true }
tracing      = { workspace = true }
async-trait  = { workspace = true }
deadpool-redis = { workspace = true }
