[package]
name    = "xero-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
xero-common  = { workspace = true }
tokio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
chrono       = { workspace = true }
base64       = { workspace = true }
async-trait  = { workspace = true }
