[package]
name    = "xero-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
xero-common = { workspace = true }
xero-auth   = { workspace = true }
tokio       = { workspace = true }
reqwest     = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
rand        = { workspace = true }
async-trait    = { workspace = true }
deadpool-redis = { workspace = true }
