[package]
name = "xero-gcs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
xero-common = { workspace = true }
tokio       = { workspace = true }
async-trait = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
bytes       = { workspace = true }

# GCS object storage. NOTE: this is yoshidan's renamed crate (was
# `google-cloud-storage`; Google took that name for their official SDK).
# Default features = rustls-tls + auth (reads GOOGLE_APPLICATION_CREDENTIALS).
gcloud-storage = "1.3"

[dev-dependencies]
tempfile = "3"
