[package]
name    = "xero-http"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
xero-common = { workspace = true }
xero-auth   = { workspace = true }
xero-state  = { workspace = true }
xero-sync   = { workspace = true }
tokio       = { workspace = true }
axum        = { workspace = true }
tower       = { workspace = true }
tower-http  = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
tracing     = { workspace = true }
chrono      = { workspace = true }
uuid        = { workspace = true }
sqlx        = { workspace = true }
dashmap     = "6"
cron        = { workspace = true }
