[package]
name    = "xero-state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
xero-common    = { workspace = true }
sqlx           = { workspace = true }
deadpool-redis = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
chrono         = { workspace = true }
uuid           = { workspace = true }
tracing        = { workspace = true }
tokio          = { workspace = true }
async-trait    = { workspace = true }
gcp-bigquery-client = { workspace = true }
thiserror      = { workspace = true }
