[package]
name    = "xero-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
xero-common = { workspace = true }
xero-auth   = { workspace = true }
xero-state  = { workspace = true }
xero-client = { workspace = true }
tokio       = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
