[package]
name    = "xero-sync"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
xero-common = { workspace = true }
xero-auth   = { workspace = true }
xero-client = { workspace = true }
xero-gcs    = { workspace = true }
tokio       = { workspace = true }
chrono      = { workspace = true }
tracing     = { workspace = true }
uuid        = { workspace = true }
futures     = { workspace = true }
